jenkins/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: jenkins
  labels:
    name: jenkins
