jenkins/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - jenkins.burntsheep.com
    secretName: jenkins-cert
  rules:
  - host: jenkins.burntsheep.com
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 80
